[package]
name = "cloud_sync"
version = "0.1.0"
edition = "2021"
author = "Paul Liferenko<liferenko.it@gmail.com>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
warp = "0.3.7"
